# data-platform-k8s

./: .gitignore  README.md
infra/jupyter-pyspark/: Dockerfile  Dockerfile.dev  README.md  jupyter-notebook.yaml  jupyter-pvc.yaml  jupyter-pyspark.yaml  pvc-pyspark.yaml  pyproject.toml  requirements.txt  spark-defaults.conf
infra/jupyter-pyspark/archive/: Dockerfile.spark-3.5.1  pyproject.toml
pipelines/ingestion/batch/: grafana.json  pyproject.toml  web3_logs_ingestion.py
pipelines/ingestion/batch/k8s/: bsc-realtime-deploy.yaml  rpc-ConfigMap-template.yaml
pipelines/ingestion/batch/src/: commit_timer.py  metrics.py  rpc_provider.py  state.py
pipelines/ingestion/streaming/: Dockerfile  README.md  aiven_web3_realtime_blocks.py  aiven_web3_realtime_blocks_no_metrics.py  aiven_web3_realtime_logs.py  aiven_web3_realtime_logs_no_metrics.py  blockchain_data_ingestion.ipynb  bsc-realtime-deploy.yaml  bsc-stream-deploy.yaml  pyproject.toml  rpc_control_plane_state_machine.md  rpc_data_plane_state_machine.md  web3_backfill_job.py  web3_realtime_blocks.py  web3_realtime_job.py  web3_realtime_logs.py  web3_realtime_logs_old.py  web3_stream_ingestion copy.py  web3_stream_ingestion.py  web3_stream_ingestion_copy.py  web3_stream_ingestion_retry.py
pipelines/ingestion/streaming/backfill_jobs/: web3_backfill_job.py  web3_backfill_logs.py  web3_realtime_blocks_v1.py
pipelines/ingestion/streaming/realtime_jobs/: bsc-realtime-blocks-deploy.yaml  bsc-realtime-logs-deploy.yaml
pipelines/ingestion/streaming/src/: __init__.py  __int__.py  block_range.py  kafka_utils.py  kafka_utils_EOS.py  metrics.py  rpc_provider-1.0.5.py  rpc_provider-copy.py  rpc_provider.py  (+5 more)
(+446 files in other folders)
