[project]
name = "juptyer-pyspark-minio-iceberg"
version = "0.1.0"
description = "A Jupyter notebook with PySpark / minio / iceberg support"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.12.2",
    "web3>=7.14.0",
    "Authlib>=1.6.6",
    "fastavro>=1.12.1",
    "cachetools>=6.2.4",
    "pyspark>=3.5.1",
]