[project]
name = "blockchain_ingestion_job"
version = "1.0.0"
description = "blockchain streaming ingestion job base image"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.12.2",
    "httpx>=0.25",
    "web3>=7.14.0",
    "Authlib>=1.6.6",
    "fastavro>=1.12.1",
    "cachetools>=6.2.4",
    "prometheus_client>=0.21.0",
    "aiohttp>=3.13.3",
    "certifi>=2024.8.30"
]